--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+html, body {
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
 a {
   color: inherit;
   text-decoration: none;
